# okmcp

./: .gitignore  README.md  mcp_config.json
client/: main.py  pyproject.toml
server/: index.js  package.json
